
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int w; int h; } ;
typedef TYPE_1__ RPanelPos ;



void __set_size(RPanelPos *pos, int w, int h) {
 pos->w = w;
 pos->h = h;
}
